NP-48 Added a documentation classes and properties for relevant data structures. Minor tweaks to Data.

--- a/Projects/Projects.csproj
+++ b/Projects/Projects.csproj
@@ -97,6 +97,7 @@
     <Compile Include="CompilerMessages.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="DataType.cs" />
+    <Compile Include="Documentation.cs" />
     <Compile Include="Enum.cs" />
     <Compile Include="FindReplace.cs" />
     <Compile Include="Host.cs" />
