--- a/Designer/Designer.csproj
+++ b/Designer/Designer.csproj
@@ -187,6 +187,26 @@
     <Compile Include="Interface\Documentation\Standard.xaml.cs">
       <DependentUpon>Standard.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Interface\Host\Converters.cs" />
+    <Compile Include="Interface\Host\DebugBehavior.xaml.cs">
+      <DependentUpon>DebugBehavior.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Interface\Host\Endpoint.xaml.cs">
+      <DependentUpon>Endpoint.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Interface\Host\Host.xaml.cs">
+      <DependentUpon>Host.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Interface\Host\MetadataBehavior.xaml.cs">
+      <DependentUpon>MetadataBehavior.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Interface\Host\ThrottlingBehavior.xaml.cs">
+      <DependentUpon>ThrottlingBehavior.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Interface\Host\WebHTTPBehavior.xaml.cs">
+      <DependentUpon>WebHTTPBehavior.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Interface\Main.xaml.cs">
       <DependentUpon>Main.xaml</DependentUpon>
     </Compile>
@@ -218,7 +238,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Globals.cs" />
-    <Compile Include="RegExs.cs" />
     <Compile Include="Themes\DragAdorner.cs" />
     <Page Include="Interface\Data\Data.xaml">
       <SubType>Designer</SubType>
@@ -253,6 +272,30 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Interface\Documentation\Standard.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Interface\Host\DebugBehavior.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Interface\Host\Endpoint.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Interface\Host\Host.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Interface\Host\MetadataBehavior.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Interface\Host\ThrottlingBehavior.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Interface\Host\WebHTTPBehavior.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -689,7 +732,15 @@
     <Resource Include="Icons\X16\External.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Interface\Host\" />
+    <Resource Include="Icons\X16\Endpoint.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\X16\BehaviorDebug.png" />
+    <Resource Include="Icons\X16\BehaviorMetadata.png" />
+    <Resource Include="Icons\X16\BehaviorThrottling.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interface\Bindings\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
