--- a/ToolkitNET30/Toolkit - NET30.csproj
+++ b/ToolkitNET30/Toolkit - NET30.csproj
@@ -34,10 +34,13 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientBaseEx.cs" />
+    <Compile Include="DependencyObjectEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
