--- a/Samples/SampleServer/SampleServer.csproj
+++ b/Samples/SampleServer/SampleServer.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicNET\Server.cs" />
     <Compile Include="BasicWinRT\Server.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
