--- a/Projects/Projects.csproj
+++ b/Projects/Projects.csproj
@@ -116,20 +116,16 @@
 	</ItemGroup>
 	<ItemGroup />
 	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-	<PropertyGroup>
-		<PreBuildEvent>REM PowerShell -File "$(ProjectDir)\Grammer\BuildLexerParser.ps1" "D:\Downloads\ANTLR\ANTLRCS\antlr3.exe" "$(ProjectDir)Grammer\" "SDLLexer.g3" "SDLParser.g3"</PreBuildEvent>
-	</PropertyGroup>
 	<Import Project="$(MSBuildExtensionsPath)\ExtensionPack\4.0\MSBuild.ExtensionPack.VersionNumber.targets"/>
 	<!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
 			 Other similar extension points exist, see Microsoft.Common.targets. -->
 	<Target Name="BeforeBuild">
-		<Message Text="Updating AssemblyInfo to Version $(VersionNumber)"></Message>
-		<Message Text="Writing to AssemblyInfo files in $(SolutionRoot)"></Message>
+		<Message Text="Updating AssemblyInfo..."></Message>
 		<AssemblyInfo AssemblyInfoFiles="@(AssemblyInfoFiles)"
 									AssemblyCopyright="$(AssemblyCopyright)"
 									AssemblyCompany="$(AssemblyCompany)"
-									AssemblyFileVersion="$(VersionNumber)"
-									>
+									AssemblyVersion="$(AssemblyVersion)"
+									AssemblyFileVersion="$(AssemblyFileVersion)">
 		</AssemblyInfo>
 	</Target>
 	<!-- <Target Name="AfterBuild">
