--- a/ToolkitNET35/Toolkit - NET35.csproj
+++ b/ToolkitNET35/Toolkit - NET35.csproj
@@ -45,27 +45,12 @@
 		<Compile Include="Properties\AssemblyInfo.cs" />
 	</ItemGroup>
 	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-	<Import Project="$(MSBuildExtensionsPath)\ExtensionPack\4.0\MSBuild.ExtensionPack.VersionNumber.targets"/>
+	<Import Project="..\MSBuild.ExtensionPack.VersionNumber.targets"/>
 	<!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
 			 Other similar extension points exist, see Microsoft.Common.targets. -->
 	<Target Name="BeforeBuild">
 		<Message Text="Updating AssemblyFileBuildNumber to $(BuildNumber)"></Message>
-		<AssemblyInfo AssemblyInfoFiles="@(AssemblyInfoFiles)"
-									AssemblyCopyright="$(AssemblyCopyright)"
-									AssemblyCompany="$(AssemblyCompany)"
-									AssemblyMajorVersion="2"
-									AssemblyMinorVersion="0"
-									AssemblyBuildNumber="0"
-									AssemblyBuildNumberType="NoIncrement"
-									AssemblyRevision="0"
-									AssemblyRevisionType="NoIncrement"
-									AssemblyFileMajorVersion="2"
-									AssemblyFileMinorVersion="0"
-									AssemblyFileBuildNumber="$(BuildNumber)"
-									AssemblyFileBuildNumberType="NoIncrement"
-									AssemblyFileRevisionType="YearWeekDay"
-									>
-		</AssemblyInfo>
+		<AssemblyInfo AssemblyInfoFiles="@(AssemblyInfoFiles)" AssemblyFileBuildNumber="$(BuildNumber)" ></AssemblyInfo>
 	</Target>
 	<!-- <Target Name="AfterBuild">
 	</Target> -->
