--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.map
 *.opensdf
 *.sdf
+*.DotSettings
 obj/
 bin/
 Build/
@@ -16,4 +17,4 @@ Debug/
 Release/
 _ReSharper.WCF Architect 2/
 _ReSharper.WCF Architect Testing/
-WCF Architect 2/
+NETPath 2/
