--- a/ToolkitNET30/Toolkit - NET30.csproj
+++ b/ToolkitNET30/Toolkit - NET30.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientBaseEx.cs" />
+    <Compile Include="DependencyList.cs" />
     <Compile Include="DependencyObjectEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
