--- a/ToolkitWinRT8/Toolkit - WinRT8.csproj
+++ b/ToolkitWinRT8/Toolkit - WinRT8.csproj
@@ -96,6 +96,7 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DependencyList.cs" />
     <Compile Include="DependencyObjectEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
