--- a/Samples/BasicWinRT/BasicWinRT.csproj
+++ b/Samples/BasicWinRT/BasicWinRT.csproj
@@ -136,6 +136,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="NETPath.Toolkit.WinRT8">
+      <HintPath>..\..\Build\NETPath.Toolkit.WinRT8.dll</HintPath>
+    </Reference>
     <Reference Include="protobuf-net">
       <HintPath>..\..\..\..\..\Downloads\Controls\ProtoBufNet\Full\netcore45\protobuf-net.dll</HintPath>
     </Reference>
