Added DependencyStack to all Toolkits.

--- a/ToolkitNET45/Toolkit - NET45.csproj
+++ b/ToolkitNET45/Toolkit - NET45.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DependencyDictionary.cs" />
     <Compile Include="DependencyList.cs" />
     <Compile Include="DependencyObjectEx.cs" />
+    <Compile Include="DependencyStack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
