--- a/ToolkitNET40/Toolkit - NET40.csproj
+++ b/ToolkitNET40/Toolkit - NET40.csproj
@@ -45,12 +45,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangeListItem.cs" />
     <Compile Include="DependencyQueue.cs" />
     <Compile Include="DependencyDictionary.cs" />
     <Compile Include="DependencyList.cs" />
     <Compile Include="DependencyObjectEx.cs" />
     <Compile Include="DependencyStack.cs" />
-    <Compile Include="ListItemChange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
