--- a/ToolkitNET45/Toolkit - NET45.csproj
+++ b/ToolkitNET45/Toolkit - NET45.csproj
@@ -45,6 +45,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangeListItem.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="DuplexController.cs" />
     <Compile Include="DependencyDictionary.cs" />
@@ -52,7 +53,6 @@
     <Compile Include="DependencyObjectEx.cs" />
     <Compile Include="DependencyQueue.cs" />
     <Compile Include="DependencyStack.cs" />
-    <Compile Include="ListItemChange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
