--- a/ToolkitNET40/Toolkit - NET40.csproj
+++ b/ToolkitNET40/Toolkit - NET40.csproj
@@ -46,11 +46,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChangeListItem.cs" />
-    <Compile Include="DependencyQueue.cs" />
-    <Compile Include="DependencyDictionary.cs" />
-    <Compile Include="DependencyList.cs" />
+    <Compile Include="DeltaQueue.cs" />
+    <Compile Include="DeltaDictionary.cs" />
+    <Compile Include="DeltaList.cs" />
     <Compile Include="DependencyObjectEx.cs" />
-    <Compile Include="DependencyStack.cs" />
+    <Compile Include="DeltaStack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
