--- a/ToolkitNET45/Toolkit - NET45.csproj
+++ b/ToolkitNET45/Toolkit - NET45.csproj
@@ -48,11 +48,11 @@
     <Compile Include="ChangeListItem.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="DuplexController.cs" />
-    <Compile Include="DependencyDictionary.cs" />
-    <Compile Include="DependencyList.cs" />
+    <Compile Include="DeltaDictionary.cs" />
+    <Compile Include="DeltaList.cs" />
     <Compile Include="DependencyObjectEx.cs" />
-    <Compile Include="DependencyQueue.cs" />
-    <Compile Include="DependencyStack.cs" />
+    <Compile Include="DeltaQueue.cs" />
+    <Compile Include="DeltaStack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
