--- a/ToolkitWinRT8/Toolkit - WinRT8.csproj
+++ b/ToolkitWinRT8/Toolkit - WinRT8.csproj
@@ -98,11 +98,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChangeListItem.cs" />
-    <Compile Include="DependencyDictionary.cs" />
-    <Compile Include="DependencyList.cs" />
+    <Compile Include="DeltaDictionary.cs" />
+    <Compile Include="DeltaList.cs" />
     <Compile Include="DependencyObjectEx.cs" />
-    <Compile Include="DependencyQueue.cs" />
-    <Compile Include="DependencyStack.cs" />
+    <Compile Include="DeltaQueue.cs" />
+    <Compile Include="DeltaStack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
