Removed support for Async Pattern methods from DCM. Added ServerBase to the NET45 and NET40 toolkits.

--- a/ToolkitNET45/Toolkit - NET45.csproj
+++ b/ToolkitNET45/Toolkit - NET45.csproj
@@ -47,7 +47,7 @@
   <ItemGroup>
     <Compile Include="ChangeListItem.cs" />
     <Compile Include="Controller.cs" />
-    <Compile Include="DuplexController.cs" />
+    <Compile Include="ServerBase.cs" />
     <Compile Include="DeltaDictionary.cs" />
     <Compile Include="DeltaList.cs" />
     <Compile Include="DependencyObjectEx.cs" />
