--- a/ToolkitNET40/Toolkit - NET40.csproj
+++ b/ToolkitNET40/Toolkit - NET40.csproj
@@ -37,6 +37,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Utilities.NET40">
+      <HintPath>..\..\..\System.Utilities\Build\System.Utilities.NET40.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
