--- a/ToolkitNET40/Toolkit - NET40.csproj
+++ b/ToolkitNET40/Toolkit - NET40.csproj
@@ -53,8 +53,12 @@
     <Compile Include="DeltaQueue.cs" />
     <Compile Include="DeltaDictionary.cs" />
     <Compile Include="DeltaList.cs" />
+    <Compile Include="DependencyDictionary.cs" />
+    <Compile Include="DependencyList.cs" />
     <Compile Include="DependencyObjectEx.cs" />
     <Compile Include="DeltaStack.cs" />
+    <Compile Include="DependencyQueue.cs" />
+    <Compile Include="DependencyStack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerBase.cs" />
   </ItemGroup>
