Made Change*Items into structs. DeltaObjects now have a complete Delta system. Added DeltaObject and DeltaProperty to all SDK's and fixed build errors. Collections are now checked for null in object constructors (NP-126).

--- a/ToolkitNET40/Toolkit - NET40.csproj
+++ b/ToolkitNET40/Toolkit - NET40.csproj
@@ -50,6 +50,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChangeListItem.cs" />
+    <Compile Include="DeltaCollectionBase.cs" />
+    <Compile Include="DeltaObject.cs" />
+    <Compile Include="DeltaProperty.cs" />
     <Compile Include="DeltaQueue.cs" />
     <Compile Include="DeltaDictionary.cs" />
     <Compile Include="DeltaList.cs" />
