--- a/ToolkitNET45/Toolkit - NET45.csproj
+++ b/ToolkitNET45/Toolkit - NET45.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="ChangeListItem.cs" />
     <Compile Include="ClientBase.cs" />
+    <Compile Include="DeltaCollectionBase.cs" />
     <Compile Include="DeltaObject.cs" />
     <Compile Include="DeltaProperty.cs" />
     <Compile Include="DependencyDictionary.cs" />
